Mon Nov 04 16:15 2013 CDT
    * lib/xss.js, tests/xss.js: Merge work-in-progress XSS filter
      from xss branch
    * lib/torblocker.js: Allow blocking of socket connections from
      Tor IPs

Thu Oct 31 18:10 2013 CDT
    * package.json: Require node-validator < 2.0.0 as a temporary
      measure while in-house XSS filtering is developed.

Wed Oct 30 19:28 2013 CDT
    * www/assets/js/util.js: Fix mod permission check breaking chat box
      in chat only mode

Mon Oct 20 21:48 2013 CDT
    * www/channel.html: Fix padding for channel.html on small screens

Thu Oct 24 17:29 2013 CDT
    * www/assets/js/player.js: Add a special of special checks for
      dailymotion because their player can only seek to the nearest
      2 seconds

Tue Oct 22 13:41 2013 CDT
    * lib/channel.js: Fix a channel dead race condition

Sun Oct 20 20:02 2013 CDT
    * lib/channel.js: Fix MOTD XSS filter stripping style tags

Sat Oct 19 12:20 2013 CDT
    * lib/channel.js: Remove some unnecessary packets

Wed Oct 16 23:29 2013 CDT
    * www/assets/js/callbacks.js, www/channel.html,
      www/assets/css/ytsync.css: Make queuefail errors always show in
      a consistently visible location.

Wed Oct 16 23:21 2013 CDT
    * www/assets/js/util.js: Add an errDialog function that shows an
      error message over the chatbox (instead of alert())

Wed Oct 16 23:09 2013 CDT
    * www/assets/js/util.js: Add a special handler so that clicking
      anywhere on the page clears a userlist dropdown, not just right
      clicking the same name.

Wed Oct 16 21:48 2013 CDT
    * www/assets/js/player.js: Add a stupid timeout hack to address
      a race condition in YouTube's HTML5 player.  Seriously?

Wed Oct 16 17:34 2013 CDT
    * lib/utilities.js: Add a "Set" wrapper around objects to represent
      sets.
    * lib/channel.js, lib/user.js: Change the way muting works- muted
      users are stored in a set and are automatically muted when they